# depthdeck

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  pages.yml  release.yml
crates/depthdeck-cli/: Cargo.toml
crates/depthdeck-cli/src/: capture.rs  main.rs
crates/depthdeck-cli/tests/: cli.rs
crates/depthdeck-core/: Cargo.toml
crates/depthdeck-core/src/: lib.rs  replay.rs  synthetic.rs  tape.rs
crates/depthdeck-core/tests/: checksum.rs  replay.rs  synthetic.rs  tape.rs
crates/depthdeck-wasm/: Cargo.toml
crates/depthdeck-wasm/src/: lib.rs
docs/: architecture.md  tape-format.md
web/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts
web/public/: demo.ddt
web/scripts/: build-demo.mjs  build-wasm.mjs
web/src/: App.test.tsx  App.tsx  BookCanvas.tsx  replay.worker.ts  styles.css  test-setup.ts  time.test.ts  time.ts  types.ts
web/tests/: viewer.spec.ts
