[workspace]
members = ["crates/depthdeck-core", "crates/depthdeck-cli", "crates/depthdeck-wasm"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ericskavinski/depthdeck"
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.2", features = ["derive"] }
crc32fast = "1.5.0"
futures-util = "0.3.31"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = { version = "1.0.149", features = ["arbitrary_precision"] }
thiserror = "2.0.17"
tokio = { version = "1.53.0", features = ["macros", "rt-multi-thread", "signal", "time", "fs", "sync"] }
tokio-tungstenite = { version = "0.30.0", features = ["native-tls"] }
url = "2.5.7"
wasm-bindgen = "0.2.126"
zstd = "0.13.3"
humantime = "2.3.0"
